--- a/forms2.html
+++ b/forms2.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<iframe src="" frameborder="0"><iframe width="853" height="480" src="https://www.youtube.com/embed/vJcxwQygDs8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></iframe>
+<iframe src="https://www.youtube.com/embed/vJcxwQygDs8"  frameborder="0" width="853" height="480"></iframe>
     <form action  method="post">
         <div>
             <label for="">firstname</label>
