--- a/tables2.html
+++ b/tables2.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/table2.css">
 </head>
 <body>
-    <table border=1px>
+    <table border=1px></table>
         <thead class="tbl_head">
         <th>id</th>
         <th>name</th>
